# slash-rs

./: Cargo.toml
src/: lib.rs  main.rs
src/client/: client.rs
src/http/: discord.rs
