[package]
name = "slash-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
error-chain = "0.12.4"
awc = { version = "3.0.1", features = ["rustls"]}
tokio = { version = "1.24.1", features = ["full"] }
serde = { version = "1.0.152", features = ["derive"] }
dotenv = "0.15.0"
actix-web = "4.2.1"
