[package]
name = "slash-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
error-chain = "0.12.4"
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0.152", features = ["derive"] }
dotenv = "0.15.0"
tokio = { version = "1", features = ["full"] }
